fixed issue with overflowing labels

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -102,9 +102,9 @@
 .project-team {
   position: absolute;
   top: 0;
-  padding: 20px 10px 10px 10px;
+  padding: 20px 10px 3px 10px;
   width: 15%;
-  height: 8%;
+  height: fit-content;
   text-align: center;
   border-bottom-right-radius: var(--common-radius);
 }
